--- a/firmware/Salamander/.cproject
+++ b/firmware/Salamander/.cproject
@@ -25,18 +25,45 @@
 							<option id="fr.ac6.managedbuild.option.gnu.cross.floatabi.1513368975" name="Floating-point ABI" superClass="fr.ac6.managedbuild.option.gnu.cross.floatabi" value="fr.ac6.managedbuild.option.gnu.cross.floatabi.hard" valueType="enumerated" />
 							<targetPlatform archList="all" binaryParser="org.eclipse.cdt.core.ELF" id="fr.ac6.managedbuild.targetPlatform.gnu.cross.1109684815" isAbstract="false" osList="all" superClass="fr.ac6.managedbuild.targetPlatform.gnu.cross" />
 							<builder buildPath="${workspace_loc:/Salamander}/Debug" id="fr.ac6.managedbuild.builder.gnu.cross.912149730" keepEnvironmentInBuildfile="false" managedBuildOn="true" name="Gnu Make Builder" superClass="fr.ac6.managedbuild.builder.gnu.cross">
-								<outputEntries>
-									
-									
-								</outputEntries>
+								<outputEntries />
 							</builder>
-
 							<tool id="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.1182273541" name="MCU GCC Compiler" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.compiler">
 								<option defaultValue="gnu.c.optimization.level.none" id="fr.ac6.managedbuild.gnu.c.compiler.option.optimization.level.687430835" name="Optimization Level" superClass="fr.ac6.managedbuild.gnu.c.compiler.option.optimization.level" useByScannerDiscovery="false" value="fr.ac6.managedbuild.gnu.c.optimization.level.size" valueType="enumerated" />
 								<option id="gnu.c.compiler.option.debugging.level.2080297645" name="Debug Level" superClass="gnu.c.compiler.option.debugging.level" useByScannerDiscovery="false" value="gnu.c.debugging.level.max" valueType="enumerated" />
-								<option id="gnu.c.compiler.option.include.paths.1175576377" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath"><listOptionValue builtIn="false" value="../Inc" /><listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/system" /><listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/src/include" /><listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/src/include/ipv4" /><listOptionValue builtIn="false" value="../Drivers/STM32F4xx_HAL_Driver/Inc" /><listOptionValue builtIn="false" value="../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy" /><listOptionValue builtIn="false" value="../Middlewares/Third_Party/FatFs/src/drivers" /><listOptionValue builtIn="false" value="../Middlewares/Third_Party/FatFs/src" /><listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/system/arch" /><listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/src/include/ipv4/lwip" /><listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/src/include/lwip" /><listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/src/include/netif" /><listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/src/include/posix" /><listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/src/include/posix/sys" /><listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/src/netif/ppp" /><listOptionValue builtIn="false" value="../Drivers/CMSIS/Include" /><listOptionValue builtIn="false" value="../Drivers/CMSIS/Device/ST/STM32F4xx/Include" /><listOptionValue builtIn="false" value="../Inc" /><listOptionValue builtIn="false" value="" /><listOptionValue builtIn="false" value="" /></option>
-								<option id="gnu.c.compiler.option.preprocessor.def.symbols.635474380" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols"><listOptionValue builtIn="false" value="__weak=&quot;__attribute__((weak))&quot;" /><listOptionValue builtIn="false" value="__packed=&quot;__attribute__((__packed__))&quot;" /><listOptionValue builtIn="false" value="USE_HAL_DRIVER" /><listOptionValue builtIn="false" value="STM32F429xx" /><listOptionValue builtIn="false" value="" /><listOptionValue builtIn="false" value="" /></option>
-								<option id="fr.ac6.managedbuild.gnu.c.compiler.option.misc.other.1766457089" superClass="fr.ac6.managedbuild.gnu.c.compiler.option.misc.other" value="-fmessage-length=0" valueType="string" />
+								<option id="gnu.c.compiler.option.include.paths.1175576377" name="Include paths (-I)" superClass="gnu.c.compiler.option.include.paths" useByScannerDiscovery="false" valueType="includePath">
+									<listOptionValue builtIn="false" value="../Inc" />
+									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/system" />
+									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/src/include" />
+									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/src/include/ipv4" />
+									<listOptionValue builtIn="false" value="../Drivers/STM32F4xx_HAL_Driver/Inc" />
+									<listOptionValue builtIn="false" value="../Drivers/STM32F4xx_HAL_Driver/Inc/Legacy" />
+									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/FatFs/src/drivers" />
+									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/FatFs/src" />
+									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/system/arch" />
+									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/src/include/ipv4/lwip" />
+									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/src/include/lwip" />
+									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/src/include/netif" />
+									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/src/include/posix" />
+									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/src/include/posix/sys" />
+									<listOptionValue builtIn="false" value="../Middlewares/Third_Party/LwIP/src/netif/ppp" />
+									<listOptionValue builtIn="false" value="../Drivers/CMSIS/Include" />
+									<listOptionValue builtIn="false" value="../Drivers/CMSIS/Device/ST/STM32F4xx/Include" />
+									<listOptionValue builtIn="false" value="../Inc" />
+									<listOptionValue builtIn="false" value="../Middlewares/ST/STM32_USB_Device_Library/Core/Inc" />
+									<listOptionValue builtIn="false" value="../Middlewares/ST/STM32_USB_Device_Library/Class/CDC/Inc" />
+									<listOptionValue builtIn="false" value="" />
+								<listOptionValue builtIn="false" value="" /></option>
+								<option id="gnu.c.compiler.option.preprocessor.def.symbols.635474380" name="Defined symbols (-D)" superClass="gnu.c.compiler.option.preprocessor.def.symbols" useByScannerDiscovery="false" valueType="definedSymbols">
+									<listOptionValue builtIn="false" value="__weak=&quot;__attribute__((weak))&quot;" />
+									<listOptionValue builtIn="false" value="__packed=&quot;__attribute__((__packed__))&quot;" />
+									<listOptionValue builtIn="false" value="USE_HAL_DRIVER" />
+									<listOptionValue builtIn="false" value="STM32F429xx" />
+									<listOptionValue builtIn="false" value="" />
+									<listOptionValue builtIn="false" value="" />
+									<listOptionValue builtIn="false" value="" />
+								</option>
+								<option id="fr.ac6.managedbuild.gnu.c.compiler.option.misc.other.1766457089" superClass="fr.ac6.managedbuild.gnu.c.compiler.option.misc.other" useByScannerDiscovery="false" value="-fmessage-length=0" valueType="string" />
+								<option id="gnu.c.compiler.option.include.files.1740671692" name="Include files (-include)" superClass="gnu.c.compiler.option.include.files" useByScannerDiscovery="false" valueType="includeFiles" />
 								<inputType id="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.c.175144428" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.c" />
 								<inputType id="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.s.1962123160" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.compiler.input.s" />
 							</tool>
@@ -48,7 +75,7 @@
 								<option id="fr.ac6.managedbuild.tool.gnu.cross.c.linker.script.644130755" name="Linker Script (-T)" superClass="fr.ac6.managedbuild.tool.gnu.cross.c.linker.script" value="../STM32F429ZITx_FLASH.ld" valueType="string" />
 								<option id="gnu.c.link.option.libs.378167280" name="Libraries (-l)" superClass="gnu.c.link.option.libs" />
 								<option id="gnu.c.link.option.paths.1729357492" name="Library search path (-L)" superClass="gnu.c.link.option.paths" />
-								<option id="gnu.c.link.option.ldflags.1603919548" superClass="gnu.c.link.option.ldflags" value="-specs=nosys.specs -specs=nano.specs" valueType="string" />
+								<option id="gnu.c.link.option.ldflags.1603919548" name="Linker flags" superClass="gnu.c.link.option.ldflags" value="-specs=nosys.specs -specs=nano.specs" valueType="string" />
 								<inputType id="cdt.managedbuild.tool.gnu.c.linker.input.233100524" superClass="cdt.managedbuild.tool.gnu.c.linker.input">
 									<additionalInput kind="additionalinputdependency" paths="$(USER_OBJS)" />
 									<additionalInput kind="additionalinput" paths="$(LIBS)" />
@@ -65,8 +92,8 @@
 							</tool>
 						</toolChain>
 					</folderInfo>
-					<sourceEntries><entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="outputPath" name="Src" /><entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="outputPath" name="Inc" /><entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="outputPath" name="Src" /><entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="outputPath" name="Inc" />
-						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="" />
+					<sourceEntries><entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Src" /><entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="Inc" />
+						
 					</sourceEntries>
 				</configuration>
 			</storageModule>
